Enable Spring AOT optimizations